Fix section peeking/spacing on iPhone/iPad.

--- a/assets/styles/_nav.scss
+++ b/assets/styles/_nav.scss
@@ -47,7 +47,7 @@
 		top:           var(--margin--vertical);
 
 		@include landscape {
-			margin-bottom: calc(100vh - var(--logo--height--scaled) - var(--margin--vertical) * 2);
+			margin-bottom: calc(var(--vh--initial, 100vh) - var(--logo--height--scaled) - var(--margin--vertical) * 2);
 		}
 
 		> h1 {
